# cpp-task

cpp_task/: CMakeLists.txt  cities.json  cpp_task.cbp  cpp_task.depend  cpp_task.layout  filter.json  found_cities.txt  main.cpp  validator.json
